lib_test/cases/space/expected
Error in line 1, column 2:
 
 ^
Expecting a non-empty, non-blank version string or space or tab
